objects/Service_Order__c.object
<CustomObject>
    <description>Service Order</description>
    <label>Service Order</label>
    <nameField>
        <label>Service Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Orders</relationshipLabel>
        <relationshipName>Service_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Objects</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entered_By__c</fullName>
        <label>Entered By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Work__c</fullName>
        <label>End of Work</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_of_Work__c</fullName>
        <label>Start of Work</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Document__c</fullName>
        <label>Sales Document</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Travel__c</fullName>
        <label>Billable Travel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Man_Work_Center__c</fullName>
        <label>Man Work Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Days_Sold__c</fullName>
        <label>Total Days Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Hours__c</fullName>
        <label>Non Billable Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order_Type__c</fullName>
        <label>Service Order Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Travel__c</fullName>
        <label>Non Billable Travel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Hours__c</fullName>
        <label>Total Project Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>